--- a/fonts/nzsb-icons.html
+++ b/fonts/nzsb-icons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>icons</title>
+    <title>nzsb-icons</title>
 
     <style>
         body {
@@ -49,28 +49,55 @@
         }
     </style>
 
-    <link rel="stylesheet" type="text/css" href="icons.css" />
+    <link rel="stylesheet" type="text/css" href="nzsb-icons.css" />
 </head>
 <body>
 
-    <h1>icons</h1>
+    <h1>nzsb-icons</h1>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="icon icon-cart"></i>
+                <i class="nzsb nzsb-busi-checked-shield"></i>
             </span>
             <br>
-            <span class='label'>cart</span>
+            <span class='label'>busi-checked-shield</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="icon icon-minus"></i>
+                <i class="nzsb nzsb-busi-wheel-barrow"></i>
             </span>
             <br>
-            <span class='label'>minus</span>
+            <span class='label'>busi-wheel-barrow</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="nzsb nzsb-sys-cart"></i>
+            </span>
+            <br>
+            <span class='label'>sys-cart</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="nzsb nzsb-sys-chevron-down"></i>
+            </span>
+            <br>
+            <span class='label'>sys-chevron-down</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="nzsb nzsb-sys-minus"></i>
+            </span>
+            <br>
+            <span class='label'>sys-minus</span>
         </div>
 
 
