--- a/fonts/icons.html
+++ b/fonts/icons.html
@@ -1264,19 +1264,19 @@
 
         <div class="preview">
             <span class="inner">
-                <i class="nzsbi nzsbi-question-double-lined"></i>
+                <i class="nzsbi nzsbi-question-double-lined-rounded"></i>
             </span>
             <br>
-            <span class='label'>question-double-lined</span>
+            <span class='label'>question-double-lined-rounded</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="nzsbi nzsbi-question-double-lined&#x3D;rounded"></i>
+                <i class="nzsbi nzsbi-question-double-lined"></i>
             </span>
             <br>
-            <span class='label'>question-double-lined&#x3D;rounded</span>
+            <span class='label'>question-double-lined</span>
         </div>
 
 
